Move to usage of YOLOv5 repository
For YOLOv5 notebook tutorial.

Also some minor rewording.

--- a/YOLOv5/YOLOv5-colab.ipynb
+++ b/YOLOv5/YOLOv5-colab.ipynb
@@ -2,9 +2,20 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "2reLlaW-GZeq"
-      },
+      "metadata": {},
+      "source": [
+        "\n",
+        "<a href=\"https://prediktera.com\" target=\"_blank\">\n",
+        "    <img width=\"255\", src=\"https://prediktera.com/wp-content/uploads/2018/04/Prediktera_Logo.svg\"></a>\n",
+        "<br />\n",
+        "This is a sample tutorial for training your own YOLOv5 deep learning object detection network by Prediktera.\n",
+        "\n",
+        "See <a href=\"https://github.com/Prediktera/Train-Onnx-Image-Segmentation/issues/new\">GitHub</a> for community support or <a href=\"https://prediktera.com/contact-us\">contact us</a> for professional support."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "# Training YOLOv5 on Colab"
       ]
@@ -24,10 +35,10 @@
         "id": "0nxd7hhO9n8u"
       },
       "source": [
-        "    project_folder/datasets/BreezeExample/images\n",
-        "                                         /labels\n",
-        "                                         /coco.names\n",
-        "                                         /data.yaml"
+        "project_folder/datasets/BreezeExample/images\n",
+        "                                     /labels\n",
+        "                                     /coco.names\n",
+        "                                     /data.yaml"
       ]
     },
     {
@@ -47,7 +58,22 @@
       },
       "outputs": [],
       "source": [
-        "%pip install -q yolov5 onnx onnxruntime onnxruntime-gpu onnx-simplifier --extra-index-url https://download.pytorch.org/whl/cu116"
+        "%pip install -q torch onnx onnxruntime onnxruntime-gpu onnx-simplifier --extra-index-url https://download.pytorch.org/whl/cu116"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/ultralytics/yolov5 --depth 1\n",
+        "%cd yolov5\n",
+        "%pip install -qr requirements.txt\n",
+        "\n",
+        "import torch\n",
+        "import utils\n",
+        "display = utils.notebook_init() "
       ]
     },
     {
@@ -124,7 +150,7 @@
         "mounded_project_folder = google_drive_mount + '/' + project_folder\n",
         "data_set_folder = mounded_project_folder + '/' + data_name\n",
         "data_set_yaml_file = data_set_folder + '/data.yaml'\n",
-        "runs_folder = mounded_project_folder + '/runs'\n",
+        "runs_folder = 'runs'\n",
         "\n",
         "# Model information\n",
         "img_size = 96\n",
@@ -140,8 +166,7 @@
       "outputs": [],
       "source": [
         "from google.colab import drive\n",
-        "drive.mount(google_drive_mount)\n",
-        "%cd $mounded_project_folder"
+        "drive.mount(google_drive_mount)"
       ]
     },
     {
@@ -196,17 +221,18 @@
       },
       "outputs": [],
       "source": [
-        "from yolov5 import train, val, export\n",
-        "from yolov5.utils.general import increment_path\n",
+        "import shutil\n",
         "\n",
-        "exp_folder = str(increment_path(runs_folder + '/train/exp'))\n",
-        "exp_val_folder = str(increment_path(runs_folder + '/val/exp'))\n",
+        "shutil.rmtree(runs_folder, ignore_errors=True, onerror=None)\n",
+        "\n",
+        "exp_folder = runs_folder + '/train/exp'\n",
+        "exp_val_folder = runs_folder + '/val/exp'\n",
         "exp_best_w = exp_folder + \"/weights/best.pt\"\n",
         "exp_onnx = exp_folder + \"/weights/best.onnx\"\n",
         "\n",
-        "train.run(imgsz=img_size, data=data_set_yaml_file, epochs=number_of_epochs, cache='ram', batch=-1, freeze=[10],save_dir=runs_folder)\n",
-        "export.run(imgsz=[img_size], weights=exp_best_w, simplify=True, opset=13, include=['onnx'], half=False)\n",
-        "val.run(imgsz=img_size, data=data_set_yaml_file, weights=exp_onnx, task='test', half=False)\n"
+        "!python train.py --imgsz $img_size --batch-size -1 --epochs $number_of_epochs --data $data_set_yaml_file --weights yolov5s.pt --cache --save_dir $runs_folder --freeze 10\n",
+        "!python export.py --imgsz $img_size --weights $exp_best_w --simplify --opset 13 --include onnx \n",
+        "!python val.py --imgsz $img_size --data $data_set_yaml_file --weights $exp_onnx --task test"
       ]
     },
     {
@@ -235,15 +261,13 @@
       },
       "outputs": [],
       "source": [
-        "from pickle import HIGHEST_PROTOCOL\n",
         "from IPython.display import Image\n",
         "from IPython.core.display import display,HTML \n",
         "conf_png = exp_val_folder + \"/confusion_matrix.png\"\n",
         "val_html = exp_val_folder + \"/results.html\"\n",
         "val_jpg = exp_val_folder + \"/val_batch0_pred.jpg\"\n",
         "display(HTML(filename=val_html))\n",
-        "display(Image(filename =conf_png, height=500),Image(filename=val_jpg, height=500))\n",
-        "\n"
+        "display(Image(filename =conf_png, height=500),Image(filename=val_jpg, height=500))"
       ]
     },
     {
@@ -286,17 +310,25 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit",
+      "display_name": "Python 3.10.7 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.8.10"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.7"
     },
     "vscode": {
       "interpreter": {
-        "hash": "b624277a42a1612a06dcbe8a40fc1b8a50cb094f6a7996e14905d86ee3a01972"
+        "hash": "2881cb102472c0a2cc7b98c9f5b468e81049b20ea6d80c54eb33ba6f13a3277c"
       }
     }
   },
