Remove unused arguments

--- a/YOLOv5/YOLOv5-colab.ipynb
+++ b/YOLOv5/YOLOv5-colab.ipynb
@@ -230,7 +230,7 @@
         "exp_best_w = exp_folder + \"/weights/best.pt\"\n",
         "exp_onnx = exp_folder + \"/weights/best.onnx\"\n",
         "\n",
-        "!python train.py --imgsz $img_size --batch-size -1 --epochs $number_of_epochs --data $data_set_yaml_file --weights yolov5s.pt --cache --save_dir $runs_folder --freeze 10\n",
+        "!python train.py --imgsz $img_size --batch-size -1 --epochs $number_of_epochs --data $data_set_yaml_file --weights yolov5s.pt --cache --freeze 10\n",
         "!python export.py --imgsz $img_size --weights $exp_best_w --simplify --opset 13 --include onnx \n",
         "!python val.py --imgsz $img_size --data $data_set_yaml_file --weights $exp_onnx --task test"
       ]
@@ -262,11 +262,9 @@
       "outputs": [],
       "source": [
         "from IPython.display import Image\n",
-        "from IPython.core.display import display,HTML \n",
+        "from IPython.core.display import display \n",
         "conf_png = exp_val_folder + \"/confusion_matrix.png\"\n",
-        "val_html = exp_val_folder + \"/results.html\"\n",
         "val_jpg = exp_val_folder + \"/val_batch0_pred.jpg\"\n",
-        "display(HTML(filename=val_html))\n",
         "display(Image(filename =conf_png, height=500),Image(filename=val_jpg, height=500))"
       ]
     },
