--- a/YOLOv5/YOLOv5-colab.ipynb
+++ b/YOLOv5/YOLOv5-colab.ipynb
@@ -4,9 +4,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n",
+        "<style>\n",
+        "    .lightImage .darkImage {\n",
+        "        padding-top: 10px;\n",
+        "    }\n",
+        "    @media (prefers-color-scheme: dark) {\n",
+        "        .lightImage {\n",
+        "            display: none;\n",
+        "        }\n",
+        "        .darkImage {\n",
+        "            display: inline;\n",
+        "        }\n",
+        "    }\n",
+        "    @media (prefers-color-scheme: light) {\n",
+        "        .lightImage {\n",
+        "            display: inline;\n",
+        "        }\n",
+        "        .darkImage {\n",
+        "            display: none;\n",
+        "        }\n",
+        "    }\n",
+        "</style>\n",
         "<a href=\"https://prediktera.com\" target=\"_blank\">\n",
-        "    <img width=\"255\", src=\"https://prediktera.com/wp-content/uploads/2018/04/Prediktera_Logo.svg\"></a>\n",
+        "    <img class=\"lightImage\" width=\"255\" alt=\"Prediktera AB Breeze\" src=\"https://prediktera.com/wp/wp-content/uploads/2022/02/prediktera_breeze.png\"/>\n",
+        "    <img class=\"darkImage\" width=\"255\" alt=\"Prediktera AB Breeze\" src=\"https://prediktera.com/wp/wp-content/uploads/2022/02/prediktera_breeze_darkmode.png\"/>\n",
+        "</a>\n",
         "<br />\n",
         "This is a sample tutorial for training your own YOLOv5 deep learning object detection network by Prediktera.\n",
         "\n",
