Fix some styling issues

--- a/YOLOv5/YOLOv5-colab.ipynb
+++ b/YOLOv5/YOLOv5-colab.ipynb
@@ -4,30 +4,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<style>\n",
-        "    .lightImage .darkImage {\n",
-        "        padding-top: 10px;\n",
-        "    }\n",
-        "    @media (prefers-color-scheme: dark) {\n",
-        "        .lightImage {\n",
-        "            display: none;\n",
-        "        }\n",
-        "        .darkImage {\n",
-        "            display: inline;\n",
-        "        }\n",
-        "    }\n",
-        "    @media (prefers-color-scheme: light) {\n",
-        "        .lightImage {\n",
-        "            display: inline;\n",
-        "        }\n",
-        "        .darkImage {\n",
-        "            display: none;\n",
-        "        }\n",
-        "    }\n",
-        "</style>\n",
         "<a href=\"https://prediktera.com\" target=\"_blank\">\n",
-        "    <img class=\"lightImage\" width=\"255\" alt=\"Prediktera AB Breeze\" src=\"https://prediktera.com/wp/wp-content/uploads/2022/02/prediktera_breeze.png\"/>\n",
-        "    <img class=\"darkImage\" width=\"255\" alt=\"Prediktera AB Breeze\" src=\"https://prediktera.com/wp/wp-content/uploads/2022/02/prediktera_breeze_darkmode.png\"/>\n",
+        "    <img width=\"255\" alt=\"Prediktera AB Breeze\" src=\"https://prediktera.com/wp/wp-content/uploads/2022/02/prediktera_breeze_darkmode.png\" style=\"background-color: black; border-radius: 25px;padding:10px;\"/>\n",
         "</a>\n",
         "<br />\n",
         "This is a sample tutorial for training your own YOLOv5 deep learning object detection network by Prediktera.\n",
@@ -91,8 +69,15 @@
       "source": [
         "!git clone https://github.com/ultralytics/yolov5 --depth 1\n",
         "%cd yolov5\n",
-        "%pip install -qr requirements.txt\n",
-        "\n",
+        "%pip install -qr requirements.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "import torch\n",
         "import utils\n",
         "display = utils.notebook_init() "
